 - Separated content negotiation from conditional handling. Added Conditions.isModified() method. Fixes RFE #183.
 - Added org.restlet.data.Dimension and Response."dimensions" property. 
 - Now autoredirects directory URIs without a leading slash character (#113). Contributed by Thierry Boileau.
 
1.0 beta 20 (2006-11-08)
[Bugs fixed]
 - Fixed bug causing the ServerServlet to create an extra HTTP server connector if one is available on the classpath. Reported by Sean Landis.
 - Fixed bug in StatusFilter, method dohandle() renamed to doHandle().
 - Removed getStatusCode() and getReasonPhrase() methods in ServletCall hiding the actual value set. Reported by Sean Landis.
 - Fixed bug preventing the restart of a Jetty 6 connector. Added RestartTestCase. Reported by Piyush Purang.
 - Fixed bug in AWS authentication algorithm if no AMZ_* header present. Reported by Mikkel Jensen.
 - Patched Simple connector to not return a "Content-length" header when size is 0.
 - Bug bug in the Simple connector causing a "Transfer-Encoding: chunked" header to be returned even if no entity was present. May be the cause of problems with the Safari browser.
 - Fixed issue with StringRepresentation wrongly computing its length in certain cases. Reported by Richard G.
 - Fixed potential NPE in StringRepresentation and StringTemplateRepresentation when no character set was defined. Reported by Chris Grindstaff.

[API breaking changes]
 - Moved Atom, FreeMarker and FileUpload extensions to org.restlet.ext.atom/freemarker/fileupload packages.
 - Moved implementation-independent classes from NRE into org.restlet packages. 
 - Renamed LogService."loggerName" and "format" properties to add the "access" prefix. Added "contextLoggerName" property.
 - Moved Resource and Representation to new org.restlet.resource package.
 - Moved *Service classes to new org.restlet.service package.
 - Renamed RedirectRestlet into org.restlet.Redirector.
 - Renamed ExtractFilter into org.restlet.Extractor.