@@ -12,10 +12,6 @@ version-minor: 21
 version-full: ${version-base} beta ${version-minor}
 version-compact: ${version-base}b${version-minor}
 
-# The base directory where a Restlet distributions are copied
-# Each Restlet version will create its own sub-directory
-dist: dist/restlet-${version-compact}
-
 # The base directory where a Restlet distributions is zipped
 # Each Restlet version will create its own file
 dist-zip: dist
